# phoron_asm

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
doc/: Design.md  Specification.md
doc/grammar/: AddNumsJasmin.pho  AllInOne.pho  Anewarray.pho  ArgsToMain.pho  ArrayDemo.pho  Catcher.pho  Count.pho  CountJasmin.pho  CountJasmin2.pho  CreateArrayOfThreads.pho  CreateMatrixOfInt.pho  ErrorTest.pho  FactorialGoto.pho  FactorialJasmin.pho  FieldsDemo.pho  Grammar.md  HelloWorld.pho  HolaMundo.pho  ImplementsDemo.pho  InterfaceDemo.pho  LookupswitchDemo.pho  Makefile  Malign.pho  MalignJasmin.pho  MultiplyNums.pho  PrintHello10Times.pho  PrivetMir.pho  README.md  StringBufferDemo.pho  VarDemo.pho  jasmin_run.sh  main.c  phoron.peg  phoron_run.sh  test.sh  test_grammar.sh
samples/: AddNums.pho  AllInOne.pho  Areturn.pho  CheckArrayType.pho  HelloWorld.pho  LineNumberDemo.pho  MinFloatExample.pho  README.md  StackPushJasmin.pho  SwapTopTwoItems.pho  TableswitchDemo.pho  ThrowsDemo.pho  run-samples.sh
samples/mak_wcai/: README.md  allocarraytest1.j  allocarraytest2.j  arrays.j  arraytest.pho  casetest.pho  casetest1.pho  concordance.pho  factorial.j  fields.j  fortest.pho  fortest1.j  hellomany.pho  helloonce.j  hilbert.j  iftest.j  iftest1.pho  newton1.pho  newton2.pho  parms1.pho  parms2.pho  parms3.j  range1.j  range2.pho  reads.j  recordtest.j  recordtest1.j  repeattest.j  roman.pho  run-samples.sh  strings1.j  strings2.pho  stringtest.j  whiletest.j  wolfisland.j  xref.j
samples/multi/: Add.pho  Div.pho  Main.pho  Sub.pho  run.sh
src/: ast.rs  attributes.rs  codegen.rs  core_interface.rs  cp_analyzer.rs  error_handler.rs  lexer.rs  lib.rs  main.rs  parser.rs  sourcefile.rs
src/ast/: mod.rs
src/cp_analyzer/: constant_pool.rs  mod.rs
src/diagnostics/: emitter.rs  mod.rs
src/lexer/: mod.rs  token.rs
tests/: all_jvm_instructions_tests.rs  all_phoron_directives_tests.rs  constant_pool_analyzer_tests.rs  lexer_integration_tests.rs  parser_integration_tests.rs
(+5 files in other folders)
